# duckdb-exploring

./: README.md  netflix_playground.py  netflix_playground_wo_pandas.py  output.csv  pyproject.toml
