[tool.poetry]
name = "duckdb-exploring"
version = "0.1.0"
description = ""
authors = ["Gabriel Santello <gvsantello@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^0.10.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
